# zeroxos-os

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
boot/: limine.conf
crates/agdb/: Cargo.toml
crates/agdb/src/: main.rs
crates/agex/: Cargo.toml
crates/agex/src/: ast.rs  codegen.rs  hir.rs  lexer.rs  lib.rs  parser.rs
crates/agprof/: Cargo.toml
crates/agprof/src/: main.rs
crates/apm/: Cargo.toml
crates/apm/src/: main.rs
crates/hal/: Cargo.toml
crates/hal/src/: cpu.rs  interrupt.rs  lib.rs  memory.rs  power.rs  timer.rs
crates/hal/src/arch/: aarch64.rs  host.rs  mod.rs  stub.rs  x86_64.rs
crates/hal/src/arch/x86_64/: paging.rs
crates/zerox-fs/: Cargo.toml
crates/zerox-fs/src/: checksum.rs  compression.rs  cow.rs  journal.rs  lib.rs  superblock.rs
crates/zerox-kernel/: Cargo.toml
crates/zerox-kernel/src/: driver.rs  error.rs  heap.rs  ipc.rs  lib.rs  memory.rs  panic.rs  process.rs  scheduler.rs  security.rs  serial.rs
crates/zerox-kernel/src/arch/: mod.rs
crates/zerox-kernel/src/arch/x86_64/: context.rs  gdt.rs  idt.rs  mod.rs  syscall.rs  tss.rs
crates/zerox-runtime/: Cargo.toml
crates/zerox-runtime/src/: audio.rs  lib.rs  network.rs  package.rs  power.rs  supervisor.rs  window.rs
crates/zerox-sim/: Cargo.toml
crates/zerox-sim/src/: demo.rs  main.rs
crates/zeroxos-boot/: Cargo.toml  build.rs
crates/zeroxos-boot/src/: main.rs
docs/: MANUAL.md
examples/: driver.agex  functions.agex  game.agex  hello.agex
linker/: x86_64.ld
scripts/: mk-iso.sh  screendump.py
targets/: x86_64-unknown-zeroxos.json
