[workspace]
resolver = "2"
members = [
    "crates/agex",
    "crates/hal",
    "crates/zerox-kernel",
    "crates/zerox-fs",
    "crates/zerox-runtime",
    "crates/apm",
    "crates/agdb",
    "crates/agprof",
    "crates/zerox-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zeroxos project"]
repository = "https://github.com/zeroxos/zeroxos"
description = "A cross-platform high-performance hybrid operating system"

[workspace.dependencies]
# Internal crates
agex = { path = "crates/agex" }
hal = { path = "crates/hal" }
zerox-kernel = { path = "crates/zerox-kernel" }
zerox-fs = { path = "crates/zerox-fs" }
zerox-runtime = { path = "crates/zerox-runtime" }

# Shared deps
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
