[workspace]
resolver = "2"
members = [
    "crates/agex",
    "crates/hal",
    "crates/zerox-kernel",
    "crates/zerox-fs",
    "crates/zerox-runtime",
    "crates/apm",
    "crates/agdb",
    "crates/agprof",
    "crates/zerox-sim",
    "crates/zeroxos-boot",
]
# `zeroxos-boot` only builds for the bare-metal target, so it is kept out of the
# default set. `cargo build`/`cargo test` (no `-p`) operate on these members and
# stay on the host — the simulator never regresses. Build the kernel image with
# `make build-x86_64` (or `cargo kbuild`), which targets `zeroxos-boot` directly.
default-members = [
    "crates/agex",
    "crates/hal",
    "crates/zerox-kernel",
    "crates/zerox-fs",
    "crates/zerox-runtime",
    "crates/apm",
    "crates/agdb",
    "crates/agprof",
    "crates/zerox-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["zeroxos project"]
repository = "https://github.com/zeroxos/zeroxos"
description = "A cross-platform high-performance hybrid operating system"

[workspace.dependencies]
# Internal crates
agex = { path = "crates/agex" }
# HAL defaults to NO backend so bare-metal consumers don't accidentally pull the
# std-based `host` backend (Cargo ignores per-member `default-features`
# overrides on inherited deps, so this must be set here). Host consumers opt in
# with `features = ["host"]`.
hal = { path = "crates/hal", default-features = false }
zerox-kernel = { path = "crates/zerox-kernel" }
zerox-fs = { path = "crates/zerox-fs" }
zerox-runtime = { path = "crates/zerox-runtime" }

# Shared deps
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
